# projects

./: README.md
data_for_good/: Makefile  notes.docx  pyproject.toml  word_cloud.json  word_cloud.py  word_cloud_combo.py  ~$notes.docx
data_for_good/.ipynb_checkpoints/: word_cloud-checkpoint.ipynb
data_for_good/cleaned_data/: progress_responses.csv  progress_responses_tr.csv  subgroup_responses.csv
