[tool.poetry]
name = "data_for_good"
version = "1.0.0"
description = ""
authors = ["Sal"]

[tool.poetry.dependencies]
python = "==3.8.10"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
pandas = "^1.4.0"
jupyter = "^1.0.0"
ipykernel = "^6.7.0"
wordcloud = "^1.8.1"
spacy = "^3.2.1"
seaborn = "^0.11.2"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
